syntax = "proto3";
option go_package = "../go_proto;proto";
package proto;
import "data.proto";

enum Response {
  ResponseBeginIndex = 0;
}

enum ResultCode {
  Success = 0; //协议请求成功，其余失败
  Fail = 1;
  SuccessOK = 10000;
  TokenExpired = 401;
  Forbidden = 403;
}

message ResponsePkg {
  Response cmdId = 1; // 协议ID
  ResultCode code = 2; //返回码
  repeated Category categories = 3;
  ArticlesByCategoryOrTag articlesByCategoryOrTag = 4;
  repeated Tag tags = 5;
  repeated Message messages = 6;
  repeated FriendLink friendLinks = 7;
  CommentInfo commentInfo = 8;
  LoginResponse loginResponse = 9;//token
  string message = 10; //消息
  int64 serverTime = 11; //服务器时间
  repeated Article articleList = 12;
  BlogHomeInfo blogHomeInfo = 13;
  ArticleInfo articleInfo = 14;
  Archives archiveInfo = 15;
  About about = 16;
  repeated Reply replyList = 17;
  ScChat scChat = 18;
  repeated ScUserMenuMessage userMenu = 19;
  ScAdminHomeData adminHomeData = 20;
  ScArticleOptions articleOptions = 21;
  ScImage uploadImage = 22;
  ScAdminArticle adminArticle = 23;
  ScArticleInfo updateArticleInfo = 24;
  ScAdminCategories adminCategories = 25;
  ScAdminTags adminTags = 26;
  ScAdminComments adminComments = 27;
  ScAdminMessages adminMessages = 28;
  ScAdminUsers adminUsers = 29;
  ScUserRole adminRoles = 30;
}

message ScImage{
  string key = 1;
}

message ScChat{
  uint32 type = 1;
  ScChatOnline scChatOnline = 2;
  ScChatMessage scChatMessage = 3;
}

message ScChatOnline{
  uint32 online = 2;
}

message ScChatMessage{
  string nickname = 1;
  string avatar = 2;
  string content = 3;
  uint32 userId = 4;
  uint32 type = 5;
  string ipAddr = 6;
  string ipSource = 7;
  int64 createTime = 8;
}

message ScUserMenuMessage{
  string name = 1;
  string path = 2;
  string component = 3;
  string icon = 4;
  bool isHidden = 5;
  repeated ScUserMenuMessage children = 6;
}

message ScAdminHomeData{
  int64 viewsCount = 1;
  int64 messageCount = 2;
  int64 userCount = 3;
  int64 articleCount = 4;
  repeated Category categoryList = 5;
  repeated UniqueView uniqueViewList = 6;
  repeated ArticleRank articleRankList = 7;
}

message ScArticleOptions{
  repeated Tag tagList = 1;
  repeated Category categoryList = 2;
}

message ScAdminArticleList{
  int64 id = 1;
  string articleTitle = 2;
  int64 createTime = 3;
  int64 updateTime = 4;
  int64 likeCount = 5;
  int64 viewsCount = 6;
  string categoryName = 7;
  repeated Tag tagList = 8;
  int32 isTop = 9;
  int32 isPublish = 10;
  int32 isDelete = 11;
}

message ScAdminArticle{
  repeated ScAdminArticleList articleList = 1;
  int32 count = 2;
}

message ScArticleInfo{
  int64 id = 1;
  string articleTitle = 2;
  string articleContent = 3;
  string articleCover = 4;
  int64 categoryId = 5;
  repeated int64 tagIdList = 6;
  int32 isTop = 7;
  int32 isPublish = 8;
}

message ScAdminCategories{
  repeated Category categoryList = 1;
  int64 count = 2;
}

message ScAdminTags{
  repeated Tag tagList = 1;
  int64 count = 2;
}

message ScComment{
  int64 id = 1;
  string avatar = 2;
  string nickname = 3;
  string replyNickname = 4;
  string articleTitle = 5;
  string commentContent = 6;
  int64 createTime = 7;
  int32 isDelete = 8;
  int64 likeCount = 9;
}

message ScAdminComments{
  repeated ScComment commentList = 1;
  int64 count = 2;
}

message ScAdminMessages{
  repeated Message messageList = 1;
  int64 count = 2;
}

message ScUsers{
  repeated ScUserRole userRoleList = 1;
  int64 id = 10;
  int64 userInfoId = 11;
  string avatar = 12;
  string nickname = 13;
  int32 loginType = 14;
  string ipAddr = 15;
  string ipSource = 16;
  int64 lastLoginTime = 17;
  int32 isDisable = 18;
  int32 status = 19;
  int64 createTime = 20;
}

message ScAdminUsers{
  repeated ScUsers userList = 1;
  int64 count = 2;
}

message ScUserRole{
  int64 id = 1;
  string roleName = 2;
}

